RESOLVED FIXED283936
Regression(287171@main) WKWebExtensionAPIDevTools API tests are crashing in debug
https://bugs.webkit.org/show_bug.cgi?id=283936
Summary Regression(287171@main) WKWebExtensionAPIDevTools API tests are crashing in d...
Chris Dumez
Reported 2024-12-02 13:18:53 PST
WKWebExtensionAPIDevTools API tests are crashing in debug since 287171@main: ``` ASSERTION FAILED: canSafelyBeUsed() /Volumes/Work/WebKit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/WeakRef.h(111) : T *WTF::WeakRef<WebKit::WebProcess>::operator->() const [T = WebKit::WebProcess, WeakPtrImpl = WTF::DefaultWeakPtrImpl] 1 0x11de32194 WTF::WeakRef<WebKit::WebProcess, WTF::DefaultWeakPtrImpl>::operator->() const 2 0x11e034d30 WebKit::WebInspectorInterruptDispatcher::ref() const 3 0x11eb28be4 WTF::DefaultRefDerefTraits<WebKit::WebInspectorInterruptDispatcher>::ref(WebKit::WebInspectorInterruptDispatcher&) 4 0x11eb28bb0 WTF::Ref<WebKit::WebInspectorInterruptDispatcher, WTF::RawPtrTraits<WebKit::WebInspectorInterruptDispatcher>, WTF::DefaultRefDerefTraits<WebKit::WebInspectorInterruptDispatcher>>::Ref(WebKit::WebInspectorInterruptDispatcher&) 5 0x11eb28840 WTF::Ref<WebKit::WebInspectorInterruptDispatcher, WTF::RawPtrTraits<WebKit::WebInspectorInterruptDispatcher>, WTF::DefaultRefDerefTraits<WebKit::WebInspectorInterruptDispatcher>>::Ref(WebKit::WebInspectorInterruptDispatcher&) 6 0x11eb286c8 WebKit::WebInspectorInterruptDispatcher::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 7 0x11f200474 IPC::Connection::dispatchMessageReceiverMessage(IPC::MessageReceiver&, WTF::UniqueRef<IPC::Decoder>&&) 8 0x11f20f708 IPC::FunctionDispatcherQueue::enqueueMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&&)::'lambda'()::operator()() RemoteLayerTreeDrawingAreaProxyMac::scheduleDisplayLink(): page has no displayID 9 0x11f20f618 WTF::Detail::CallableWrapper<IPC::FunctionDispatcherQueue::enqueueMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&&)::'lambda'(), void>::call() 10 0x130f0a200 WTF::Function<void ()>::operator()() const 11 0x1310dda44 WTF::(anonymous namespace)::DispatchWorkItem::operator()() ```
Attachments
Chris Dumez
Comment 1 2024-12-02 13:23:45 PST
Chris Dumez
Comment 2 2024-12-02 13:24:52 PST
Radar WebKit Bug Importer
Comment 3 2024-12-02 13:25:02 PST
Chris Dumez
Comment 4 2024-12-02 13:38:16 PST
*** Bug 283934 has been marked as a duplicate of this bug. ***
EWS
Comment 5 2024-12-02 13:42:06 PST
Committed 287231@main (e8861dabf587): <https://commits.webkit.org/287231@main> Reviewed commits have been landed. Closing PR #37339 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.