Regression(287171@main) WKWebExtensionAPIDevTools API tests are crashing in debug https://bugs.webkit.org/show_bug.cgi?id=283936 rdar://140810380

Reviewed by Timothy Hatcher.

Use a CheckedRef instead of a WeakRef to the WebProcess, since this is being accessed
off the main thread.

* Source/WebKit/WebProcess/Inspector/WebInspectorInterruptDispatcher.h:

Canonical link: https://commits.webkit.org/287231@main